--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   stats-server:
     build: stats-server/stats-service
     container_name: stats_server
+    restart: on-failure
     depends_on:
       - stats-db
     ports:
@@ -19,6 +20,7 @@ services:
   stats-db:
     image: postgres:14-alpine
     container_name: db_stats
+    restart: on-failure
     ports:
       - "6541:5432"
     volumes:
@@ -31,6 +33,7 @@ services:
   main-server:
     build: main-server
     container_name: main_server
+    restart: on-failure
     depends_on:
       - ewm-db
     ports:
@@ -44,6 +47,7 @@ services:
   ewm-db:
     image: postgres:14-alpine
     container_name: main_server_db
+    restart: on-failure
     ports:
       - "6542:5432"
     volumes:
