--- a/stats-server/stats-service/src/main/resources/application.properties
+++ b/stats-server/stats-service/src/main/resources/application.properties
@@ -9,13 +9,8 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:explore
-spring.datasource.username=test
-spring.datasource.password=test
 
-!spring.datasource.url=${SPRING_DATASOURCE_STATS}
-!spring.datasource.username=${POSTGRES_USER}
-!spring.datasource.password=${POSTGRES_PASSWORD}
-!spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_STATS}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
