--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,24 @@ version: '3.1'
 services:
   stats-server:
     build: stats-server/stats-service
-    container_name: stats_server
-    restart: on-failure
+    container_name: stats-server
     depends_on:
       - stats-db
     ports:
       - "9090:9090"
     environment:
-      - SPRING_DATASOURCE_STATS=jdbc:postgresql://statsdb:5432/explore
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_NAME=explore
+      - SPRING_DATASOURCE_STATS=jdbc:postgresql://stats-db:5432/exploreStats
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
-      - STATS_SERVER_URL=http://stats-db:9090
 
   stats-db:
     image: postgres:14-alpine
-    container_name: db_stats
-    restart: on-failure
+    container_name: stats-db
     ports:
       - "6541:5432"
     volumes:
       - /var/lib/postgresql/dataStats
+
     environment:
       - POSTGRES_DB=exploreStats
       - POSTGRES_USER=root
@@ -40,14 +35,13 @@ services:
       - "8080:8080"
     environment:
       - MAIN_SERVER_URL=http://mainserver:8080
-      - SPRING_DATASOURCE_MAIN=jdbc:postgresql://ewm-db:5432/explore
+      - SPRING_DATASOURCE_MAIN=jdbc:postgresql://ewm-db:5432/exploreMain
       - POSTGRES_USER_MAIN=root
       - POSTGRES_PASSWORD_MAIN=root
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: main_server_db
-    restart: on-failure
+    container_name: ewm_db
     ports:
       - "6542:5432"
     volumes:
