--- a/stats-server/stats-service/src/main/resources/application.properties
+++ b/stats-server/stats-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 
 
-spring.datasource.url=${SPRING_DATASOURCE_STATS}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
