--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,21 +27,21 @@ services:
 
   main-server:
     build: main-server
-    container_name: main_server
+    container_name: main-server
     restart: on-failure
     depends_on:
       - ewm-db
     ports:
       - "8080:8080"
     environment:
-      - MAIN_SERVER_URL=http://mainserver:8080
+      - MAIN_SERVER_URL=http://main-server:8080
       - SPRING_DATASOURCE_MAIN=jdbc:postgresql://ewm-db:5432/exploreMain
       - POSTGRES_USER_MAIN=root
       - POSTGRES_PASSWORD_MAIN=root
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: ewm_db
+    container_name: main-db
     ports:
       - "6542:5432"
     volumes:
