--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
     build: ./stats-server/stats-service
@@ -27,10 +27,11 @@ services:
 
   main-server:
     build: main-server
-    container_name: main-server
+    container_name: ewm-service
     restart: on-failure
     depends_on:
       - ewm-db
+      - stats-servera
     ports:
       - "8080:8080"
     environment:
