feat: реализован main service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     restart: on-failure
     depends_on:
       - ewm-db
-      - stats-servera
+      - stats-server
     ports:
       - "8080:8080"
     environment:
