--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.mvc.problemdetails.enabled = true
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_MAIN:jdbc:postgresql://localhost:5432/ewm}
+spring.datasource.username=${POSTGRES_USER_MAIN:romik}
+spring.datasource.password=${POSTGRES_PASSWORD_MAIN:romik}
+spring.datasource.driverClassName=org.postgresql.Driver
 
