--- a/stats-server/stats-service/src/main/resources/application.properties
+++ b/stats-server/stats-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ewm_stats}
+spring.datasource.username=${POSTGRES_USER:romik}
+spring.datasource.password=${POSTGRES_PASSWORD:romik}
 spring.datasource.driver-class-name=org.postgresql.Driver
